--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".views.HomeFragment"
-    android:background="#FF0000">
+    tools:context=".views.HomeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/book_list_recycler_view"
