--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -10,5 +10,5 @@
         android:id="@+id/book_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitCenter"/>
 </androidx.cardview.widget.CardView>
